fix aligned

--- a/web/less/contact-item.less
+++ b/web/less/contact-item.less
@@ -116,7 +116,7 @@ a {
     }
 
     object {
-        //.scale(1.2);
+        vertical-align: middle;
         transition: 0.2s;
         &:hover {
             .scale(0.9);
